fix dark mode

--- a/src/css/fly.css
+++ b/src/css/fly.css
@@ -80,9 +80,8 @@
 
 }
 
-.box hr {
-  color: #b7cfd6;
-
+hr {
+  color: #7e6340;
 }
 
 
